--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -37,3 +37,7 @@ jobs:
       - name: 'Terraform Plan' 
         id: plan
         run: terraform plan -out=tfplan
+      
+      - name: 'Terraform Apply'
+        id: apply
+        run: terraform apply -auto-approve tfplan
