--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -1,6 +1,9 @@
 name: Build and deploy Terraform to Azure
 
-on: [push]
+on: 
+  pull_request:
+    branches: 
+      - main
 
 permissions:
   id-token: write
