--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -16,10 +16,10 @@ jobs:
               client-id: ${{ secrets.AZURE_CLIENT_ID }}
               tenant-id: ${{ secrets.AZURE_TENANT_ID }}
               subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
+              
           - name: 'Set up Terraform'
             uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
-                
+
           - name: 'Destroy Terraform'
             id: destroy
-            run: terraform apply destroy -auto-approve 
+            run: terraform destroy -auto-approve 
