--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -20,6 +20,13 @@ jobs:
           - name: 'Set up Terraform'
             uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
+          - name: 'Download Terraform Plan'
+            id: download 
+            uses: actions/download-artifact@v2
+            with:
+              name: tfplan
+              path: ./main.tfplan
+
           - name: 'Destroy Terraform'
             id: destroy
-            run: terraform destroy -auto-approve 
+            run: terraform destroy -auto-approve .main.tfplan
