--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -29,4 +29,4 @@ jobs:
 
           - name: 'Destroy Terraform'
             id: destroy
-            run: terraform destroy -auto-approve .main.tfplan
+            run: terraform destroy -auto-approve tfplan
