--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: 'Publish Terraform Plan'
         id: publish 
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
         with:
           name: tfplan 
           path: ./main.tfplan
