--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -22,7 +22,7 @@ jobs:
 
           - name: 'Download Terraform Plan'
             id: download 
-            uses: actions/download-artifact@v2
+            uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 #v4.3.0
             with:
               name: tfplan
               path: ./main.tfplan
