--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: 'Terraform Plan' 
         id: plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -out=main.tfplan -var="azure_object_id=${{ secrets.AZURE_OBJECT_ID }}"
 
       - name: 'Publish Terraform Plan'
         id: publish 
@@ -52,6 +52,6 @@ jobs:
           name: tfplan 
           path: ./main.tfplan
       
-      - name: 'Terraform Apply'
-        id: apply
-        run: terraform apply -auto-approve tfplan
+      # - name: 'Terraform Apply'
+      #   id: apply
+      #   run: terraform apply -auto-approve tfplan
