enabled apply again

--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -52,6 +52,6 @@ jobs:
           name: tfplan 
           path: ./main.tfplan
       
-      # - name: 'Terraform Apply'
-      #   id: apply
-      #   run: terraform apply -auto-approve tfplan
+      - name: 'Terraform Apply'
+        id: apply
+        run: terraform apply -auto-approve tfplan
