testing artifact uploads

--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -49,9 +49,9 @@ jobs:
         id: publish 
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
         with:
-          name: tfplan 
+          name: main.tfplan 
           path: ./main.tfplan
       
       - name: 'Terraform Apply'
         id: apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve ./main.tfplan
