--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -24,9 +24,9 @@ jobs:
             id: download 
             uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 #v4.3.0
             with:
-              name: tfplan
+              name: main.tfplan
               path: ./main.tfplan
 
           - name: 'Destroy Terraform'
             id: destroy
-            run: terraform destroy -auto-approve tfplan
+            run: terraform destroy -auto-approve ./main.tfplan
