--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -26,6 +26,7 @@ jobs:
             uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 #v4.3.0
             with:
               name: main.tfplan
+              run-id: ${{ github.event.workflow_run.id }}
               path: ./main.tfplan
 
           - name: 'Destroy Terraform'
