--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: 'Terraform Init'
         id: init
-        run: terraform init
+        run: terraform init -var-file="variables.tf" -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" 
 
       - name: 'Terraform Validate'
         id: validate
