--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -14,44 +14,44 @@ permissions:
   contents: read
 jobs:
   build-and-deploy:
+    env: 
+      AZURE-CLIENT-ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
+      AZURE-TENANT-ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE-SUBSCRIPTION-ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
     runs-on: ubuntu-latest
     steps:
       - name: 'Az CLI login'
         uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 #v2.3.0
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: 'Check out code'
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
     
+      - uses: cschleiden/replace-tokens@4d5a042c84c3568b3858b7af9394923d2d5195c9 #v1.3.0
+        with: 
+          files: 'backend.conf'
+
       - name: 'Set up Terraform'
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
       - name: 'Terraform Format'
-        id: fmt 
         run: terraform fmt -check 
 
       - name: 'Terraform Init'
-        id: init
-        run: terraform init -var-file="variables.tf" -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" 
+        run: terraform init -var-file="variables.tf" -backend-config="backend.conf" -auto-approve 
 
       - name: 'Terraform Validate'
-        id: validate
         run: terraform validate
 
       - name: 'Terraform Plan' 
-        id: plan
         run: terraform plan -out=main.tfplan -var="azure_object_id=${{ secrets.AZURE_OBJECT_ID }}"
 
-      - name: 'Publish Terraform Plan'
-        id: publish 
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
-        with:
-          name: main.tfplan 
-          path: ./main.tfplan
+      # - name: 'Publish Terraform Plan'
+      #   uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
+      #   with:
+      #     name: main.tfplan 
+      #     path: ./main.tfplan
       
-      - name: 'Terraform Apply'
-        id: apply
-        run: terraform apply -auto-approve ./main.tfplan
+      # - name: 'Terraform Apply'
+        # run: terraform apply -auto-approve ./main.tfplan
