--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -21,13 +21,16 @@ jobs:
           - name: 'Set up Terraform'
             uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
-          - name: 'Download Terraform Plan'
-            id: download 
-            uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 #v4.3.0
-            with:
-              name: main.tfplan
-              run-id: ${{ github.event.workflow_run.id }}
-              path: ./main.tfplan
+          - name: 'Terraform init'
+            run: terraform init -var-file="variables.tf" -backend-config="backend.conf"
+
+        #   - name: 'Download Terraform Plan'
+        #     id: download 
+        #     uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 #v4.3.0
+        #     with:
+        #       name: main.tfplan
+        #       run-id: ${{ github.event.workflow_run.id }}
+        #       path: ./main.tfplan
 
           - name: 'Destroy Terraform'
             id: destroy
