--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -15,19 +15,19 @@ permissions:
 jobs:
   build-and-deploy:
     env: 
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET}}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      Azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      Azure_client_secret: ${{ secrets.AZURE_CLIENT_SECRET}}
+      Azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      Azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     runs-on: ubuntu-latest
     steps:
       - name: 'Az CLI login'
         uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 #v2.3.0
         with: 
-          client-id: $AZURE_CLIENT_ID
-          tenant-id: $AZURE_TENANT_ID
-          subscription-id: $AZURE_SUBSCRIPTION_ID
+          client-id: $Azure_client_id
+          tenant-id: $Azure_tenant_id
+          subscription-id: $Azure_subscription_id
 
       - name: 'Check out code'
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
@@ -36,10 +36,10 @@ jobs:
         with: 
           files: 'backend.conf'
         env: 
-          azure_subsciption_id: $AZURE_SUBSCRIPTION_ID
-          azure_client_id: $AZURE_CLIENT_ID
-          azure_client_secret: $AZURE_CLIENT_SECRET
-          azure_tenant_id: $AZURE_TENANT_ID
+          azure_subsciption_id: $Azure_subscription_id
+          azure_client_id: $Azure_client_id
+          azure_client_secret: $Azure_client_secret
+          azure_tenant_id: $Azure_tenant_id
 
       - name: 'Set up Terraform'
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
