--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -26,7 +26,7 @@ jobs:
         uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 #v2.3.0
         with: 
           client-id: $AZURE_CLIENT_ID
-          tenant-id: $AZURE_TENANT_ID
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: $AZURE_SUBSCRIPTION_ID
 
       - name: 'Check out code'
