--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 'Az CLI login'
         uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 #v2.3.0
         with: 
-          client-id: ${{ env.AZURE_TENANT_ID }}
+          client-id: ${{ env.AZURE_CLIENT_ID }}
           tenant-id: ${{ env.AZURE_TENANT_ID }}
           subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
@@ -36,10 +36,10 @@ jobs:
         with: 
           files: 'backend.conf'
         env: 
-          azure_subsciption_id: ${{ env.AZURE_SUBSCRIPTION_ID }}
           azure_client_id: ${{ env.AZURE_CLIENT_ID }}
           azure_client_secret: ${{ env.AZURE_CLIENT_SECRET }}
           azure_tenant_id: ${{ env.AZURE_TENANT_ID }}
+          azure_subsciption_id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
       - name: 'Set up Terraform'
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
