--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -45,10 +45,14 @@ jobs:
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
       - name: 'Terraform Format'
-        run: terraform fmt -check 
+        run: | 
+          echo main.tf 
+          echo backend.conf 
+          terraform fmt -check 
 
       - name: 'Terraform Init'
         run: terraform init -var-file="variables.tf" -backend-config="backend.conf" -auto-approve 
+
       - name: 'Terraform Validate'
         run: terraform validate
 
