updated renovate config to automerge minor updates, and NOT automerge major updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,5 +5,12 @@
   ],
   "assignees": [
     "Tha-cVation"
+  ],
+  "automergeMajor": false,
+  "automergeMinor": true,
+  "seperateMinorPatch": false,
+  "dependencyDashboard": true,
+  "labels": [
+    "Renovate"
   ]
 }
