--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -1,9 +1,7 @@
 name: Build and deploy Terraform to Azure
 
-on: 
-  pull_request:
-    branches: 
-      - main
+on:
+  workflow_dispatch
 
 permissions:
   id-token: write
@@ -21,13 +19,13 @@ jobs:
 
       - name: 'Check out code'
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
-    
+
       - name: 'Set up Terraform'
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
       - name: 'Terraform Format'
-        id: fmt 
-        run: terraform fmt -check 
+        id: fmt
+        run: terraform fmt -check
 
       - name: 'Terraform Init'
         id: init
@@ -37,17 +35,17 @@ jobs:
         id: validate
         run: terraform validate
 
-      - name: 'Terraform Plan' 
+      - name: 'Terraform Plan'
         id: plan
         run: terraform plan -out=tfplan
 
       - name: 'Publish Terraform Plan'
-        id: publish 
+        id: publish
         uses: actions/upload-artifact@v4
         with:
-          name: tfplan 
+          name: tfplan
           path: ./main.tfplan
-      
+
       - name: 'Terraform Apply'
         id: apply
         run: terraform apply -auto-approve tfplan
