--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,11 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
-  "assignees": [
-    "Tha-cVation"
-  ],
+  "extends": ["config:recommended"],
+  "assignees": ["Tha-cVation"],
   "major": {
     "automerge": false
   },
@@ -14,7 +10,5 @@
   },
   "separateMinorPatch": false,
   "dependencyDashboard": true,
-  "labels": [
-    "Renovate"
-  ]
+  "labels": ["Renovate"]
 }
