--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -1,8 +1,8 @@
 name: Build and deploy Terraform to Azure
 
-on: 
+on:
   pull_request:
-    branches: 
+    branches:
       - main
 
 permissions:
@@ -12,42 +12,42 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Az CLI login'
+      - name: "Az CLI login"
         uses: azure/login@a457da9ea143d694b1b9c7c869ebb04ebe844ef5 #v2.3.0
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: 'Check out code'
+      - name: "Check out code"
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
-    
-      - name: 'Set up Terraform'
+
+      - name: "Set up Terraform"
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
-      - name: 'Terraform Format'
-        id: fmt 
-        run: terraform fmt -check 
+      - name: "Terraform Format"
+        id: fmt
+        run: terraform fmt -check
 
-      - name: 'Terraform Init'
+      - name: "Terraform Init"
         id: init
         run: terraform init
 
-      - name: 'Terraform Validate'
+      - name: "Terraform Validate"
         id: validate
         run: terraform validate
 
-      - name: 'Terraform Plan' 
+      - name: "Terraform Plan"
         id: plan
         run: terraform plan -out=tfplan
 
-      - name: 'Publish Terraform Plan'
-        id: publish 
+      - name: "Publish Terraform Plan"
+        id: publish
         uses: actions/upload-artifact@v4
         with:
-          name: tfplan 
+          name: tfplan
           path: ./main.tfplan
-      
-      - name: 'Terraform Apply'
+
+      - name: "Terraform Apply"
         id: apply
         run: terraform apply -auto-approve tfplan
