--- a/.github/workflows/build-and-deploy-terraform.yml
+++ b/.github/workflows/build-and-deploy-terraform.yml
@@ -41,13 +41,13 @@ jobs:
         id: plan
         run: terraform plan -out=tfplan
 
-      - name: "Publish Terraform Plan"
-        id: publish
-        uses: actions/upload-artifact@v4
-        with:
-          name: tfplan
-          path: ./main.tfplan
+      # - name: "Publish Terraform Plan"
+      #   id: publish
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: tfplan
+      #     path: ./main.tfplan
 
-      - name: "Terraform Apply"
-        id: apply
-        run: terraform apply -auto-approve tfplan
+      # - name: "Terraform Apply"
+      #   id: apply
+      #   run: terraform apply -auto-approve tfplan
