--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -30,3 +30,19 @@ jobs:
         uses: super-linter/super-linter@4e8a7c2bf106c4c766c816b35ec612638dc9b6b2 #v7.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIX_YAML_PRETTIER: true
+          FIX_MARKDOWN_PRETTIER: true
+          FIX_JSON_PRETTIER: true
+          FIX_TERRAFORM_TFLINT: true
+          FIX_MARKDOWN: true
+          FIX_NATURAL_LANGUAGE: true
+      - name: Commit and push linting fixes
+        if: >
+          github.event_name == 'push_request' &&
+          github.ref_name != github.event.repository.default_branch
+        uses: stefanweifel/git-auto-commit-action@v5
+        with:
+          branch: ${{ github.event.pull_request.head.ref  || github.head_ref  github.ref }}
+          commit_message: "fix: auto-fix linter issues"
+          commit_user_name: super-linter
+          commit_user_name: super-linter@super-linter.dev
