--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -43,5 +43,5 @@ jobs:
           github.ref_name != github.event.repository.default_branch
         uses: stefanweifel/git-auto-commit-action@v5
         with:
-          branch: ${{ github.event.pull_request.head.ref  || github.head_ref  github.ref }}
+          branch: ${{ github.event.pull_request.head.ref  || github.head_ref || github.ref }}
           commit_message: "fix: auto-fix linter issues"
