--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -30,7 +30,7 @@ jobs:
         uses: super-linter/super-linter@4e8a7c2bf106c4c766c816b35ec612638dc9b6b2 #v7.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_EXCLUDE: ./main.tf
+          FILTER_REGEX_EXCLUDE: ^main\.tf
           IGNORE_GITIGNORED_FILES: true
           FIX_YAML_PRETTIER: true
           FIX_MARKDOWN_PRETTIER: true
@@ -40,7 +40,7 @@ jobs:
 
       - name: Commit and push linting fixes
         if: >
-          github.event_name == 'push_request' &&
+          github.event_name == 'pull_request' &&
           github.ref_name != github.event.repository.default_branch
         uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403 #v5.2.0
         with:
