--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
+      contents: write
       packages: read
       # To report GitHub Actions status checks
       statuses: write
