--- a/.github/workflows/Trivy-scan.yml
+++ b/.github/workflows/Trivy-scan.yml
@@ -15,7 +15,7 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     env:
-      IMAGE: cvation-intro-repo:latest
+      IMAGE: ./cvation-intro-repo:latest
       # Check version (https://github.com/aquasecurity/trivy/releases)
       TRIVY_VERSION: v0.61.0
     steps:
