--- a/.github/workflows/Trivy-scan.yml
+++ b/.github/workflows/Trivy-scan.yml
@@ -18,7 +18,7 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     env:
-      IMAGE: ./cvation-intro-repo:latest
+      IMAGE: cvation-intro-repo:latest
       # Check version (https://github.com/aquasecurity/trivy/releases)
       TRIVY_VERSION: v0.61.0
     steps:
@@ -43,6 +43,7 @@ jobs:
       - name: build Docker image
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
+          context: .
           tags: ${{ env.IMAGE }}
           load: true
           cache-from: ${{ startsWith(runner.name, 'GitHub Actions') && 'type=gha' || '' }}
