--- a/.github/workflows/Trivy-scan.yml
+++ b/.github/workflows/Trivy-scan.yml
@@ -55,4 +55,5 @@ jobs:
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@60168efe1c415ce0f5521ea06d5c2062adbeed1b # v3.28.17
+        with:
           sarif_file: "trivy-results.sarif"
