--- a/.github/workflows/Trivy-scan.yml
+++ b/.github/workflows/Trivy-scan.yml
@@ -40,7 +40,7 @@ jobs:
       - name: build Docker image
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
-          context: app
+          context: .
           tags: ${{ env.IMAGE }}
           load: true
           cache-from: ${{ startsWith(runner.name, 'GitHub Actions') && 'type=gha' || '' }}
