--- a/.github/workflows/Trivy-scan.yml
+++ b/.github/workflows/Trivy-scan.yml
@@ -1,8 +1,8 @@
 name: Trivy Scan
 
 on:
-  schedule:
-    - cron: "0 2 * * *" # run at 2 AM UTC
+  # schedule:
+  #   - cron: "0 2 * * *" # run at 2 AM UTC
 
   workflow_dispatch:
 
